YH Added Customer Guarantee Comms

--- a/templates/yourheat/adminpages/customer_comms_landing_page.html
+++ b/templates/yourheat/adminpages/customer_comms_landing_page.html
@@ -103,6 +103,15 @@
             <!-- <p class="critical_ss_fields">&nbsp;&nbsp;[Customer Title] [Customer Last Name] [Customer ID]</p> -->
         </div>
     </div>
+    <div class="row comms-row">
+        <div class = "col-4">                      
+            <a class="btn boilerbtn btn-warning btn-comms" href="{% url 'GetGuarantee' customer_id  %}">Guarantee Certificate Comms</a>
+        </div>
+        <div class = "col-8 comms-text">    
+            <i>Dear ____, Following your recent boiler installation, please find attached your xx year guarantee certificate...</i>
+            <!-- <p class="critical_ss_fields">&nbsp;&nbsp;[Customer Title] [Customer Last Name] [Customer ID]</p> -->
+        </div>
+    </div>
    
     
     <hr>
