--- a/static/css/yh.css
+++ b/static/css/yh.css
@@ -906,3 +906,9 @@ table td#job-checklist-text {
     font-weight: 400;
     padding:5px;
 }
+
+h1 {
+    font-size: 2.5rem;
+    font-weight: 500;
+    font-style  : italic
+}
