--- a/templates/pdf/user_yourheatx/guarantee_for_pdf.html
+++ b/templates/pdf/user_yourheatx/guarantee_for_pdf.html
@@ -19,7 +19,7 @@
 
   <br><br><br>
 
-  <img src="http://www.qpcentral.co.uk/static/images/YourHeatLogo-TransparentBkg.png">
+  <img src="http://www.qpcentral.co.uk/static/images/plumble_logo_transparent.png">
 
   <br><br><br><br>
 
@@ -36,7 +36,7 @@
 
 
   <br><br><br><br>
-  <b>Is currently covered under a Your Heat boiler parts and labour guarantee for:</b>
+  <b>Is currently covered under a Plumble boiler parts and labour guarantee for:</b>
   
 
   <br><br>
@@ -51,13 +51,13 @@
 
   <br><br><br><br>
 
-  <i>Your boiler will be covered by the Your Heat guarantee all the while the plan is kept.<br>
+  <i>Your boiler will be covered by the Plumble guarantee all the while the plan is kept.<br>
   Any break in the plan will void the guarantee immediately.</i><br><br><br><br>
   <b>Due to Expire: {{expiry_date|date:"jS F Y"}}</b>
 
   <br><br><br><br>
 
-  <img src="http://www.qpcentral.co.uk/static/images/YH_receipt_signature_transparentBkg.png">
+  <img src="http://www.qpcentral.co.uk/static/images/plumble_receipt_signature_transparentBkg.png">
   <br>
   ..................................................
 
