--- a/templates/pdf/user_yourheatx/invoice_for_pdf.html
+++ b/templates/pdf/user_yourheatx/invoice_for_pdf.html
@@ -19,10 +19,10 @@
 
 <table id="invoice">
   <tr>
-    <td id="invoice-cell-left"><img src="http://www.qpcentral.co.uk/static/images/YourHeatLogo.png"> </td>
+    <td id="invoice-cell-left"><img src="http://www.qpcentral.co.uk/static/images/plumble_logo_transparent.png"> </td>
     <td id="invoice-cell-middle"></td>
     <td id="invoice-cell-left">
-      <b>Your Heat Ltd</b><br>
+      <b>Plumble Ltd</b><br>
       The Oast<br>
       East Malling Business Centre<br>
       New Road<br>
@@ -120,9 +120,9 @@
   <tr>
     <td id="invoice-cell-left">
       <b>Payment Details</b><br><br>
-      Account Name: Your Heat LTD<br>
-      Account Number: 54576261<br>
-      Sort Code: 60-60-08<br>
+      Account Name: Plumble LTD<br>
+      Account Number: 99193900<br>
+      Sort Code: 60-83-71<br>
       All major debit and credit cards accepted
     </td>
     <td id="invoice-cell-middle"></td>
