--- a/templates/pdf/user_yourheatx/job_completion_pdf.html
+++ b/templates/pdf/user_yourheatx/job_completion_pdf.html
@@ -9,10 +9,10 @@
 
 <body>
 
-    <img class="completion-img-center" src="http://www.qpcentral.co.uk/static/images/YourHeatLogo.png">    
+    <img class="completion-img-center" src="http://www.qpcentral.co.uk/static/images/plumble_logo_transparent.png">    
 
 
-    <h2 id = "job-completion">Your Heat Installation Confirmed</h2>
+    <h2 id = "job-completion">Plumble Installation Confirmed</h2>
 
     <br>
 
