--- a/templates/pdf/user_yourheatx/quote_for_pdf.html
+++ b/templates/pdf/user_yourheatx/quote_for_pdf.html
@@ -12,12 +12,12 @@
     <div class="header">
     <table id ="header">
         <tr>
-            <td class="col1"><img class="img--logo" src="{{frecords.0.document.url}}"></td>
-            <td class="col2"><img class="img--oftec" src="{{frecords.2.document.url}}"></td>            
+            <td class="col1"><img class="img--logo" src="http://www.qpcentral.co.uk/static/images/plumble_logo_transparent.png"></td>
+                       
             <td class="col3"><img class="img--worcester-bosch" src="{{frecords.5.document.url}}"></td>
             <td class="col4"><img class="img--bosch"  src="{{frecords.6.document.url}}"></td>
             <td class="col5"><img class="img--gassafe"  src="{{frecords.7.document.url}}">&nbsp;
-            <td class="col6"><div class="gas-safe-number">Gas Safe Number<br>570636</div></td>
+            <td class="col6"><div class="gas-safe-number">Gas Safe Number<br>948776</div></td>
         </tr>
     </table>
     <br>
@@ -192,7 +192,7 @@
         <br>
         <p>
         Other options available such as Buy Now Pay Later. Ask for details.<br>
-        * Boiler must be serviced annually by YourHeat using our service plan. Ask for details.
+        * Boiler must be serviced annually by Plumble using our service plan. Ask for details.
         </p>
     </div>
 
@@ -255,7 +255,7 @@
         <br>
         <p>
         To discuss or accept your quotation, please call our office on <b>01732 622990</b>, alternatively email
-        <b>info@yourheat.co.uk</b>
+        <b>info@plumble.co.uk</b>
         </p>
         <br>
     </div>
@@ -266,7 +266,7 @@
         <hr>
         <br>
         <p>
-        The Yourheat team will be in touch with you shortly to make sure you have everything you need to
+        The Plumble team will be in touch with you shortly to make sure you have everything you need to
         make an informed decision, in the mean time if you’d like to discuss your quote or need any further
         support please contact us.
         </p>
@@ -940,7 +940,7 @@
 
     <!-- Page 6 -->
 
-    <div class="page-start"><br><br></div>
+    <div class="page-start"><br><br><br></div>
 
     <div class="tech-details">
         <table>
@@ -1085,11 +1085,11 @@
                                 <br>
                                 <p class="account-details">If you are paying a deposit to secure an installation, you can do so using the details below.</p>
                                 <br>
-                                <p class="account-details">Account Name: Your Heat LTD</p>
+                                <p class="account-details">Account Name: Plumble Heating & Renewables Limited</p>
                                 <br>
-                                <p class="account-details">Account Number: 54576261</p>
+                                <p class="account-details">Account Number: 99193900</p>
                                 <br>
-                                <p class="account-details">Sort Code: 60-60-08</p>
+                                <p class="account-details">Sort Code: 60-83-71</p>
                                 <br>
                                 <p class="account-details">All major debit and credit cards accepted - including AMEX</p>
 
@@ -1108,7 +1108,7 @@
 
         </table>
         <div id="final-strap-line">
-            <p id="final-strap-text">Your Heat - Our Priority, Always.</p>
+            <p id="final-strap-text">Plumble - Our Priority, Always.</p>
         </div>
     </div>
 
@@ -1127,7 +1127,7 @@
             <td class="tech-title">Components Summary Details (Inc VAT)</td>
         </tr>
         <tr>
-            <td class="tech-attrib">(for internal Yourheat use only) &nbsp;|&nbsp; Quotation Date: {% now "jS F Y H:i" %} &nbsp;|&nbsp; Produced By: {{idx.first_name}} {{idx.last_name}}</td>
+            <td class="tech-attrib">(for internal Plumble use only) &nbsp;|&nbsp; Quotation Date: {% now "jS F Y H:i" %} &nbsp;|&nbsp; Produced By: {{idx.first_name}} {{idx.last_name}}</td>
         </tr>
      </table>
      <br>
