--- a/templates/pdf/user_yourheatx/receipt_for_pdf.html
+++ b/templates/pdf/user_yourheatx/receipt_for_pdf.html
@@ -19,7 +19,7 @@
 
 <table id="invoice">
   <tr>
-    <td id="invoice-cell-left"><img src="http://www.qpcentral.co.uk/static/images/YourHeatLogo.png"> </td>
+    <td id="invoice-cell-left"><img src="http://www.qpcentral.co.uk/static/images/plumble_logo_transparent.png"> </td>
     <td id="invoice-cell-middle"></td>
     <td id="invoice-cell-left">
       <h4>RECEIPT</h4>
@@ -65,7 +65,7 @@
     </td>
     <td id="invoice-cell-middle"></td>
     <td id="invoice-cell-left">
-      Your Heat Ltd<br>
+      Plumble Ltd<br>
       The Oast<br>
       East Malling Business Centre<br>
       New Road<br>
@@ -140,7 +140,7 @@
     <td id="invoice-cell-left">
       RECEIVED WITH THANKS
       <br><br><br>
-      <img src="http://www.qpcentral.co.uk/static/images/YH_receipt_signature.png">
+      <img src="http://www.qpcentral.co.uk/static/images/plumble_receipt_signature_transparentBkg.png">
       <hr>
       SIGNATURE
     </td>
