--- a/templates/yourheat/adminpages/base.html
+++ b/templates/yourheat/adminpages/base.html
@@ -5,7 +5,7 @@
 
 
 <head>
-  <title>Your Heat Customer Admin</title>
+  <title>Plumble Customer Admin</title>
   <meta charset="UTF-8">
   <meta name="google" content="notranslate">
   <meta http-equiv="Content-Language" content="en">
@@ -39,7 +39,7 @@
       </div>
     </a>
 
-    <a class="navbar-brand" href="/adminhome">Your Heat Operations Admin</a>
+    <a class="navbar-brand" href="/adminhome">Plumble Operations Admin</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
       aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -48,14 +48,14 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="/adminhome">Dashboard<span class="sr-only">(current)</span></a>
+          <!-- <a class="nav-link" href="/adminhome">Dashboard<span class="sr-only">(current)</span></a> -->
         </li>
 
         <span class="nav-item dropdown">
-          <a class="nav-link dropdown dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
+          <!-- <a class="nav-link dropdown dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
           Marketing Campaigns (not yet active)
-          </a>
+          </a> -->
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <!-- <a class="dropdown-item" href="/ListCustomersForComms/Survey%20Booked%20Comms/">Survey Booked Comms</a>
             <a class="dropdown-item" href="/ListCustomersForComms/Installation%20Notification%20Comms/">Installation Notification Comms</a>
