--- a/templates/yourheat/customerpages/customer_acceptance.html
+++ b/templates/yourheat/customerpages/customer_acceptance.html
@@ -6,7 +6,7 @@
 
     <div class="form-container">
 
-        <p class="info-header-text">Thank You for choosing Yourheat</p>
+        <p class="info-header-text">Thank you for choosing Plumble</p>
 
         <p class="info-text">We are delighted that you would like to take advantage of our special offer.</p>
 
@@ -27,7 +27,7 @@
 
     <div class="form-container">
 
-        <p class="info-header-text">Thank You for choosing Yourheat</p>
+        <p class="info-header-text">Thank you for choosing Plumble</p>
 
         <p class="info-text">We are delighted that you would like us to take care of you.</p>
 
