--- a/templates/yourheat/pages/hub_home.html
+++ b/templates/yourheat/pages/hub_home.html
@@ -87,13 +87,13 @@
     <br>
     <div class="row">
         <div class="col-3">
-            <a class = "hub-home" href="https://yourheat.co.uk/boiler-finance/"  target="_blank"><button id = 'finance-demo'><i class="fas fa-money-check"></i> FINANCE DEMO</button></a>
+            <a class = "hub-home" href="https://www.plumble.co.uk/boiler-finance/"  target="_blank"><button id = 'finance-demo'><i class="fas fa-money-check"></i> FINANCE DEMO</button></a>
         </div>
         <div class="col-3">
             <a class = "hub-home" href="https://www.creditmaster2.co.uk/"  target="_blank"><button id = 'link-to-hitachi'><i class="fas fa-external-link-alt"></i> LINK TO HITACHI</button></a>
         </div>
         <div class="col-3">
-            <a class = "hub-home" href="https://yourheat.co.uk/care-plan-pricing/"  target="_blank"><button id = 'view-plans' class='float-right'><i class="fas fa-map"></i> VIEW YOUR HEAT PLANS</button></a>
+            <a class = "hub-home" href="https://www.plumble.co.uk/care-plan-pricing/"  target="_blank"><button id = 'view-plans' class='float-right'><i class="fas fa-map"></i> VIEW YOUR HEAT PLANS</button></a>
         </div>
         <div class="col-3">
             <a href="/PreviewRecommendAFriend/{{customer_id}}"><button id = 'recommend-a-friend' class='float-right'><i class="fas fa-users"></i> RECOMMEND A FRIEND</button></a>
