--- a/templates/pdf/user_yourheatx/customer_comms/Heat Plan Comms.html
+++ b/templates/pdf/user_yourheatx/customer_comms/Heat Plan Comms.html
@@ -56,14 +56,14 @@
 
         #final-strap-line {
             text-align: center;
-            color: rgb(251, 126, 51);
+            color: rgb(34, 34, 34);
         }
 
         #final-strap-text {
             font-family: verdana;
             font-style: italic;
-            font-size: 16px;
-            font-weight: 900;
+            font-size: 14px;
+            font-weight: 800;
         }
 
         #img2 {
@@ -84,7 +84,7 @@
             width: 99%;
             height: 80px;
             background-position: center;
-            background-color: black;
+            background-color: #585858;
             margin: 25px auto 0px auto;
             padding-left:5%;
             padding-right:5%;
@@ -146,7 +146,7 @@
         }
 
         .data-column-on {
-            border: 5px solid orange;
+            border: 5px solid #0ed145;
             border-radius: 25px 0px 25px 0px;
             width:250px;
             text-align: center;
@@ -209,24 +209,24 @@
 </head>
 
 <body>
-    <div class="email_header">
-        <img src='http://www.qpcentral.co.uk/static/images/YH_email_header_care_plan.png' alt="Your Heat Header"/>
-    </div>
+    <!-- <div class="email_header"> -->
+        <img src='https://www.qpcentral.co.uk/static/images/plumble_email_header_care_plan.png' alt="Plumble Header"/>
+    <!-- </div> -->
 
     <div class="body_text">
 
         <div class="content">
             <div class="contact_text">
-                <img src='http://www.qpcentral.co.uk/static/images/phone-solid.png' width="15" /> <a
+                <img src='https://www.qpcentral.co.uk/static/images/phone-solid.png' width="15" /> <a
                     href="tel:01732622990">01732 622990</a> | <img
-                    src='http://www.qpcentral.co.uk/static/images/globe-solid.png' width="15" /> <a
-                    href='https://yourheat.co.uk/book-a-job/'>www.yourheat.co.uk</a> | <img
-                    src='http://www.qpcentral.co.uk/static/images/envelope-solid.png' width="15" /> <a
-                    href='mailto:info@yourheat.co.uk'>info@yourheat.co.uk</a>
+                    src='https://www.qpcentral.co.uk/static/images/globe-solid.png' width="15" /> <a
+                    href='https://www.plumble.co.uk/book-a-job/'>www.plumble.co.uk</a> | <img
+                    src='https://www.qpcentral.co.uk/static/images/envelope-solid.png' width="15" /> <a
+                    href='mailto:hello@plumble.co.uk'>hello@plumble.co.uk</a>
             </div>
 
             <p class="all_text">
-                <b>YOUR HEAT CARE PLAN</b><br>
+                <b>PLUMBLE CARE PLAN</b><br>
             </p>
 
             <p class="all_text">Dear {{ customer_title }} {{ customer_last_name }},</p>
@@ -238,7 +238,7 @@
                 Thank you for taking the time to view our range of care plans.  We have sent you the plans based on your installation with us.
                 This would be a 12 month rolling contract, which automatically renews each year.
                 {% else %}
-                Your Heat would like to welcome you to your new care plan.  You have signed up to the {{ fuel_type }} / {{ type_of_plan }}.
+                Plumble would like to welcome you to your new care plan.  You have signed up to the {{ fuel_type }} / {{ type_of_plan }}.
                 This is a 12 month rolling contract, which will automatically renew each year.
                 {% endif %}
             </p>
@@ -367,25 +367,25 @@
 
                                             <p class = "features"><span class="bigbold">&nbsp;</span></p>
                                     
-                                            <p class = "features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
+                                            <p class = "features"><img src='https://www.qpcentral.co.uk/static/images/check-solid-green.png' width="15" /></p>
                                
-                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
+                                            <p class="features"><img src='https://www.qpcentral.co.uk/static/images/check-solid-green.png' width="15" /></p>
                                
                                     {% if "Landlord" in customer_plan_type %}
                                
-                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
+                                            <p class="features"><img src='https://www.qpcentral.co.uk/static/images/check-solid-green.png' width="15" /></p>
                                
                                     {% endif %}
                                
-                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/times-solid.png' width="15" /></p>
+                                            <p class="features"><img src='https://www.qpcentral.co.uk/static/images/times-solid.png' width="15" /></p>
                                
-                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/times-solid.png' width="15" /></p>
+                                            <p class="features"><img src='https://www.qpcentral.co.uk/static/images/times-solid.png' width="15" /></p>
                                
-                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/times-solid.png' width="15" /></p>
+                                            <p class="features"><img src='https://www.qpcentral.co.uk/static/images/times-solid.png' width="15" /></p>
                                
-                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/times-solid.png' width="15" /></p>
+                                            <p class="features"><img src='https://www.qpcentral.co.uk/static/images/times-solid.png' width="15" /></p>
                                
-                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/times-solid.png' width="15" /></p>
+                                            <p class="features"><img src='https://www.qpcentral.co.uk/static/images/times-solid.png' width="15" /></p>
 
                             </div>
                         </td>
@@ -440,25 +440,25 @@
                                             <p class = "features"><span class="bigbold">&nbsp;</span></p>
                                  
                                 
-                                            <p class = "features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
+                                            <p class = "features"><img src='https://www.qpcentral.co.uk/static/images/check-solid-green.png' width="15" /></p>
                                  
-                                            <p class = "features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
+                                            <p class = "features"><img src='https://www.qpcentral.co.uk/static/images/check-solid-green.png' width="15" /></p>
                                 
                                     {% if "Landlord" in customer_plan_type %}
                                  
-                                            <p class = "features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
+                                            <p class = "features"><img src='https://www.qpcentral.co.uk/static/images/check-solid-green.png' width="15" /></p>
                                    
                                     {% endif %}
                                   
-                                            <p class = "features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
+                                            <p class = "features"><img src='https://www.qpcentral.co.uk/static/images/check-solid-green.png' width="15" /></p>
                                   
-                                            <p class = "features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
+                                            <p class = "features"><img src='https://www.qpcentral.co.uk/static/images/check-solid-green.png' width="15" /></p>
                                  
-                                            <p class = "features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
+                                            <p class = "features"><img src='https://www.qpcentral.co.uk/static/images/check-solid-green.png' width="15" /></p>
                                     
-                                            <p class = "features"><img src='http://www.qpcentral.co.uk/static/images/times-solid.png' width="15" /></p>
+                                            <p class = "features"><img src='https://www.qpcentral.co.uk/static/images/times-solid.png' width="15" /></p>
                                      
-                                            <p class = "features"><img src='http://www.qpcentral.co.uk/static/images/times-solid.png' width="15" /></p>
+                                            <p class = "features"><img src='https://www.qpcentral.co.uk/static/images/times-solid.png' width="15" /></p>
                                       
                             </div>
                         </td>
@@ -513,25 +513,25 @@
                                             <p class = "features fbold"><span class="bigbold">&nbsp;</span></p>
                                     
                                
-                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
+                                            <p class="features"><img src='https://www.qpcentral.co.uk/static/images/check-solid-green.png' width="15" /></p>
                                     
-                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
+                                            <p class="features"><img src='https://www.qpcentral.co.uk/static/images/check-solid-green.png' width="15" /></p>
                                    
                                     {% if "Landlord" in customer_plan_type %}
                                   
-                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
+                                            <p class="features"><img src='https://www.qpcentral.co.uk/static/images/check-solid-green.png' width="15" /></p>
                                       
                                     {% endif %}
                                    
-                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
+                                            <p class="features"><img src='https://www.qpcentral.co.uk/static/images/check-solid-green.png' width="15" /></p>
                                      
-                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
+                                            <p class="features"><img src='https://www.qpcentral.co.uk/static/images/check-solid-green.png' width="15" /></p>
                                      
-                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
+                                            <p class="features"><img src='https://www.qpcentral.co.uk/static/images/check-solid-green.png' width="15" /></p>
                                        
-                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/check-solid.png' width="15" /></p>
+                                            <p class="features"><img src='https://www.qpcentral.co.uk/static/images/check-solid-green.png' width="15" /></p>
                                        
-                                            <p class="features"><img src='http://www.qpcentral.co.uk/static/images/times-solid.png' width="15" /></p>
+                                            <p class="features"><img src='https://www.qpcentral.co.uk/static/images/times-solid.png' width="15" /></p>
                                        
                             </div>
                         </td>
@@ -552,28 +552,28 @@
             <!-- <hr> -->
             <p class="centered-text">
                 <b>Speedy</b><br>
-                <img src='http://www.qpcentral.co.uk/static/images/shipping-fast-solid.png' width="30" /><br>
+                <img src='https://www.qpcentral.co.uk/static/images/shipping-fast-solid-grey.png' width="30" /><br>
                 90% of all emergency call-outs completed within 24 hours.<br><br>
 
                 <b>Fair</b><br>
-                <img src='http://www.qpcentral.co.uk/static/images/handshake-solid.png' width="30" /><br>
+                <img src='https://www.qpcentral.co.uk/static/images/handshake-solid-grey.png' width="30" /><br>
                 Your price won’t change even if you have had a call-out. Ever.<br><br>
 
                 <b>Comprehensive</b><br>
-                <img src='http://www.qpcentral.co.uk/static/images/clipboard-check-solid.png' width="30" /><br>
+                <img src='https://www.qpcentral.co.uk/static/images/clipboard-check-solid-grey.png' width="30" /><br>
                 No matter the age or model, your boiler is protected. Can't fix it? We’ll give you 15% off a new one.<br><br>
 
                 <b>Value</b><br>
-                <img src='http://www.qpcentral.co.uk/static/images/pound-sign-solid.png' width="30" /><br>
-                Switching to Your Heat can on average save you up to 20% compared to other providers.<br><br>
+                <img src='https://www.qpcentral.co.uk/static/images/pound-sign-solid-grey.png' width="30" /><br>
+                Switching to Plumble can on average save you up to 20% compared to other providers.<br><br>
 
                 <b>No Excess</b><br>
-                <img src='http://www.qpcentral.co.uk/static/images/times-circle-solid.png' width="30" /><br>
+                <img src='https://www.qpcentral.co.uk/static/images/times-circle-solid-grey.png' width="30" /><br>
                 With our plans, we don’t charge an excess, what you see, is what you pay<br><br>
 
                 {% if not "Confirmed" in customer_plan_type %}
                 <b>Extend your Guarantee</b><br>
-                <img src='http://www.qpcentral.co.uk/static/images/fast-forward-solid.png' width="30" /><br>
+                <img src='https://www.qpcentral.co.uk/static/images/fast-forward-solid-grey.png' width="30" /><br>
                 Did we install your boiler?  You could benefit from an extended guarantee with us<br><br>
                 {% endif %}
             </p>
@@ -581,9 +581,9 @@
             
             <p class="all_text">
                 {% if "Confirmed" in customer_plan_type %}
-                If you have any questions, please call us on <a href="tel:01732622990">01732 622990</a> or email via <a href='mailto:service@yourheat.co.uk'>service@yourheat.co.uk</a>
+                If you have any questions, please call us on <a href="tel:01732622990">01732 622990</a> or email via <a href='mailto:hello@plumble.co.uk'>hello@plumble.co.uk</a>
                 {% else %}
-                If you wish to sign up to one of the plans, you can do so online <b><a href="https://yourheat.co.uk/care-plan-pricing/"><span class=text-orange>BY CLICKING HERE</span></a></b>, it takes less than a minute.<br>
+                If you wish to sign up to one of the plans, you can do so online <b><a href="https://plumble.co.uk/care-plan-pricing/">BY CLICKING HERE</a></b>, it takes less than a minute.<br>
                 You can also talk to us here by calling <a href="tel:01732622990">01732 622990.</a>
                 {% endif %}
             </p>
@@ -593,7 +593,7 @@
 
             <div id="final-strap-line">
                 <p id="final-strap-text">"Our friendly team will provide you with an efficient service, delivered with a
-                    sense of warmth. Your Heat, is our Priority, ALWAYS."</p>
+                    sense of warmth."</p>
             </div>
 
         </div>
@@ -606,11 +606,11 @@
     <table class="background_footer">
         <tr>
             <td>
-                <img src='http://www.qpcentral.co.uk/static/images/yh_logo_white_text.png' width="150">  
+                <img src='https://www.qpcentral.co.uk/static/images/plumble_logo_white_text.png' width="150">  
             </td>
             <td>
-                <p class="footer_text">Copyright © 2021 Your Heat Ltd | VAT No. 213 6884 04</p>
-                <p class="footer_text"><a href='https://yourheat.co.uk/boiler-heating-care-plans-policy-terms-conditions/'>Heating Care Plan Terms and
+                <p class="footer_text">Copyright © 2024 Plumble Ltd | VAT No. 458261280</p>
+                <p class="footer_text"><a href='https://www.plumble.co.uk/terms-conditions/'>Terms and
                         Conditions</a></p> 
             </td>
         </tr>
