--- a/templates/pdf/user_yourheatx/customer_comms/Job Parts Comms.html
+++ b/templates/pdf/user_yourheatx/customer_comms/Job Parts Comms.html
@@ -57,14 +57,14 @@
 
         #final-strap-line {
             text-align: center;
-            color: rgb(251, 126, 51);
+            color: rgb(34, 34, 34);
         }
 
         #final-strap-text {
             font-family: verdana;
             font-style: italic;
-            font-size: 16px;
-            font-weight: 900;
+            font-size: 14px;
+            font-weight: 800;
         }
 
         #img2 {
@@ -85,7 +85,7 @@
             width: 99%;
             height: 80px;
             background-position: center;
-            background-color: black;
+            background-color: #585858;
             margin: 25px auto 0px auto;
         }
 
@@ -97,7 +97,7 @@
 
         .left {
             float: left;
-            margin: 1.5rem 2rem 2rem 2rem;
+            margin: 0.5rem 2rem 2rem 2rem;
 
         }
 
@@ -118,19 +118,19 @@
 
 <body>
     <div class="email_header">
-        <img src='http://www.qpcentral.co.uk/static/images/YourHeatLogo-Transparent.png' alt="Your Heat Header"/>
+        <img src='https://www.qpcentral.co.uk/static/images/plumble_logo_transparent.png' alt="Plumble Header"/>
     </div>
 
     <div class="body_text">
 
         <div class="content">
             <div class="contact_text">
-                <img src='http://www.qpcentral.co.uk/static/images/phone-solid.png' width="15" /> <a
+                <img src='https://www.qpcentral.co.uk/static/images/phone-solid.png' width="15" /> <a
                     href="tel:01732622990">01732 622990</a> | <img
-                    src='http://www.qpcentral.co.uk/static/images/globe-solid.png' width="15" /> <a
-                    href='https://yourheat.co.uk/book-a-job/'>www.yourheat.co.uk</a> | <img
-                    src='http://www.qpcentral.co.uk/static/images/envelope-solid.png' width="15" /> <a
-                    href='mailto:info@yourheat.co.uk'>info@yourheat.co.uk</a>
+                    src='https://www.qpcentral.co.uk/static/images/globe-solid.png' width="15" /> <a
+                    href='https://www.plumble.co.uk/book-a-job/'>www.plumble.co.uk</a> | <img
+                    src='https://www.qpcentral.co.uk/static/images/envelope-solid.png' width="15" /> <a
+                    href='mailto:hello@plumble.co.uk'>hello@plumble.co.uk</a>
             </div>
 
 
@@ -157,14 +157,14 @@
             <p class="all_text"><b>Additional Info: </b>{{additional_information}}</p>
             
             <p class="all_text">
-                Warm Regards, The Your Heat Team
+                Warm Regards, The Plumble Team
             </p>
 
             <!-- End of Email body content  -->
 
             <div id="final-strap-line">
                 <p id="final-strap-text">"Our friendly team will provide you with an efficient service, delivered with a
-                    sense of warmth. Your Heat, is our Priority, ALWAYS."</p>
+                    sense of warmth."</p>
             </div>
 
         </div>
@@ -174,12 +174,12 @@
     <div class="background_footer">
 
         <div class="left">
-            <img src='http://www.qpcentral.co.uk/static/images/yh_logo_white_text.png' width="150">
+            <img src='https://www.qpcentral.co.uk/static/images/plumble_logo_white_text.png' width="150">
         </div>
 
         <div class="right">
-            <p class="footer_text">Copyright © 2020 Your Heat Ltd | VAT No. 213 6884 04</p>
-            <p class="footer_text"><a href=' https://yourheat.co.uk/terms-and-conditions/'>Installation Terms and
+            <p class="footer_text">Copyright © 2024 Plumble Ltd | VAT No. 458261280</p>
+            <p class="footer_text"><a href=' https://www.plumble.co.uk.co.uk/terms-and-conditions/'>Installation Terms and
                     Conditions</a></p>
         </div>
     </div>
