--- a/templates/pdf/user_yourheatx/customer_comms/Recommend A Friend.html
+++ b/templates/pdf/user_yourheatx/customer_comms/Recommend A Friend.html
@@ -42,14 +42,14 @@
 
         #final-strap-line {
             text-align: center;
-            color: rgb(251, 126, 51);
+            color: rgb(34, 34, 34);
         }
 
         #final-strap-text {
             font-family: verdana;
             font-style: italic;
-            font-size: 16px;
-            font-weight: 900;
+            font-size: 14px;
+            font-weight: 800;
         }
 
         #img2 {
@@ -70,7 +70,7 @@
             width: 99%;
             height: 80px;
             background-position: center;
-            background-color: black;
+            background-color: #585858;
             margin: 25px auto 0px auto;
         }
 
@@ -82,7 +82,7 @@
 
         .left {
             float: left;
-            margin: 1.5rem 2rem 2rem 2rem;
+            margin: 0.5rem 2rem 2rem 2rem;
 
         }
 
@@ -110,20 +110,20 @@
 <td style="padding:0px;margin:0px;">&nbsp;</td>
 <td style="padding:0px;margin:0px;" width="800">
 <!-- End of Layout Header Snippet  -->
-    <div class="email_header">
-        <img src='http://www.qpcentral.co.uk/static/images/YH_email_header_recommend_a_friend.png' alt="Your Heat Header"/>
-    </div>
+    <!-- <div class="email_header"> -->
+        <img src='https://www.qpcentral.co.uk/static/images/plumble_email_header_recommend_a_friend.png' alt="Plumble Header"/>
+    <!-- </div> -->
 
     <div class="body_text">
 
         <div class="content">
             <div class="contact_text">
-                <img src='http://www.qpcentral.co.uk/static/images/phone-solid.png' width="15" /> <a
+                <img src='https://www.qpcentral.co.uk/static/images/phone-solid.png' width="15" /> <a
                     href="tel:01732622990">01732 622990</a> | <img
-                    src='http://www.qpcentral.co.uk/static/images/globe-solid.png' width="15" /> <a
-                    href='https://yourheat.co.uk/book-a-job/'>www.yourheat.co.uk</a> | <img
-                    src='http://www.qpcentral.co.uk/static/images/envelope-solid.png' width="15" /> <a
-                    href='mailto:info@yourheat.co.uk'>info@yourheat.co.uk</a>
+                    src='https://www.qpcentral.co.uk/static/images/globe-solid.png' width="15" /> <a
+                    href='https://www.plumble.co.uk/book-a-job/'>www.plumble.co.uk</a> | <img
+                    src='https://www.qpcentral.co.uk/static/images/envelope-solid.png' width="15" /> <a
+                    href='mailto:hello@plumble.co.uk'>hello@plumble.co.uk</a>
             </div>
 
             <p class="all_text">Dear {{ customer_title }} {{ customer_last_name }},</p>
@@ -131,25 +131,25 @@
             <!-- Insert Email body content here  -->
 
             <p class="all_text">
-                Thanks again for choosing Your Heat as your Boiler Installation partner. As a thanks for your business, 
+                Thanks again for choosing Plumble as your Boiler Installation partner. As a thanks for your business, 
                 we would like to offer you the opportunity to receive a £50 Amazon voucher if you know someone who would 
                 also like a boiler installed by us.
             </p>
             
             <p class="all_text">
-                If you do know someone who would be interested, all you have to do is click on this link <a href="https://www.yourheat.co.uk">www.yourheat.co.uk</a> and provide their contact details and we will manage the rest.
+                If you do know someone who would be interested, all you have to do is click on this link <a href="https://www.plumble.co.uk">www.plumble.co.uk</a> and provide their contact details and we will manage the rest.
                 If your suggestion goes ahead with us, we will send you the £50 voucher in the post.
             </p>
             
             <p class="all_text">
-                Warm Regards, The Your Heat Team
+                Warm Regards, The Plumble Team
             </p>
 
             <!-- End of Email body content  -->
 
             <div id="final-strap-line">
                 <p id="final-strap-text">"Our friendly team will provide you with an efficient service, delivered with a
-                    sense of warmth. Your Heat, is our Priority, ALWAYS."</p>
+                    sense of warmth."</p>
             </div>
 
         </div>
@@ -159,12 +159,12 @@
     <div class="background_footer">
 
         <div class="left">
-            <img src='http://www.qpcentral.co.uk/static/images/yh_logo_white_text.png' width="150">
+            <img src='https://www.qpcentral.co.uk/static/images/plumble_logo_white_text.png' width="150">
         </div>
 
         <div class="right">
-            <p class="footer_text">Copyright © 2020 Your Heat Ltd | VAT No. 213 6884 04</p>
-            <p class="footer_text"><a href=' https://yourheat.co.uk/terms-and-conditions/'>Installation Terms and
+            <p class="footer_text">Copyright © 2024 Plumble Ltd | VAT No. 458261280</p>
+            <p class="footer_text"><a href=' https://www.plumble.co.uk.co.uk/terms-and-conditions/'>Installation Terms and
                     Conditions</a></p>
         </div>
     </div>
