--- a/templates/pdf/user_yourheatx/customer_comms/Special Offer Comms.html
+++ b/templates/pdf/user_yourheatx/customer_comms/Special Offer Comms.html
@@ -50,14 +50,14 @@
 
         #final-strap-line {
             text-align: center;
-            color: rgb(251, 126, 51);
+            color: rgb(34, 34, 34);
         }
 
         #final-strap-text {
             font-family: verdana;
             font-style: italic;
-            font-size: 16px;
-            font-weight: 900;
+            font-size: 14px;
+            font-weight: 800;
         }
 
         #img2 {
@@ -78,7 +78,7 @@
             width: 99%;
             height: 80px;
             background-position: center;
-            background-color: black;
+            background-color: #585858;
             margin: 25px auto 0px auto;
         }
 
@@ -90,7 +90,7 @@
 
         .left {
             float: left;
-            margin: 1.5rem 2rem 2rem 2rem;
+            margin: 0.5rem 2rem 2rem 2rem;
 
         }
 
@@ -113,11 +113,11 @@
 
         .email_button a {
             padding: 8px 12px;
-            border: 3px solid #f07e39;
+            border: 3px solid #fcfae2;
             border-radius: 5px;
             font-family: Helvetica, Arial, sans-serif;
             font-size: 20px;
-            color: #ffffff; 
+            color: rgb(34, 34, 34); 
             text-decoration: none;
             /* font-weight: bold; */
             display: inline-block;  
@@ -134,20 +134,20 @@
 <td style="padding:0px;margin:0px;" width="800">
 <!-- End of Layout Header Snippet  -->
 
-    <div class="email_header">
-        <img src='http://www.qpcentral.co.uk/static/images/YH_email_header_special_offer.png' alt="Your Heat Header"/>
-    </div>
+    <!-- <div class="email_header"> -->
+        <img src='https://www.qpcentral.co.uk/static/images/plumble_email_header_special_offer.png' alt="Plumble Header"/>
+    <!-- </div> -->
 
     <div class="body_text">
 
         <div class="content">
             <div class="contact_text">
-                <img src='http://www.qpcentral.co.uk/static/images/phone-solid.png' width="15" /> <a
+                <img src='https://www.qpcentral.co.uk/static/images/phone-solid.png' width="15" /> <a
                     href="tel:01732622990">01732 622990</a> | <img
-                    src='http://www.qpcentral.co.uk/static/images/globe-solid.png' width="15" /> <a
-                    href='https://yourheat.co.uk/book-a-job/'>www.yourheat.co.uk</a> | <img
-                    src='http://www.qpcentral.co.uk/static/images/envelope-solid.png' width="15" /> <a
-                    href='mailto:info@yourheat.co.uk'>info@yourheat.co.uk</a>
+                    src='https://www.qpcentral.co.uk/static/images/globe-solid.png' width="15" /> <a
+                    href='https://www.plumble.co.uk/book-a-job/'>www.plumble.co.uk</a> | <img
+                    src='https://www.qpcentral.co.uk/static/images/envelope-solid.png' width="15" /> <a
+                    href='mailto:hello@plumble.co.uk'>hello@plumble.co.uk</a>
             </div>
 
             <p class="all_text">
@@ -181,14 +181,14 @@
             </p>
 
             <p class="all_text">
-                Warm Regards, The Your Heat Team
+                Warm Regards, The Plumble Team
             </p>
 
             <!-- End of Email body content  -->
 
             <div id="final-strap-line">
                 <p id="final-strap-text">"Our friendly team will provide you with an efficient service, delivered with a
-                    sense of warmth. Your Heat, is our Priority, ALWAYS."</p>
+                    sense of warmth."</p>
             </div>
 
         </div>
@@ -200,8 +200,8 @@
             <td align="right">
                 <table cellspacing="0" cellpadding="0">
                     <tr>
-                        <td class="email_button" bgcolor="#f07e39">
-                            <a  class=”link” href="http://127.0.0.1:8000/CustomerAcceptance/SpecialOffer/{{smartsheet_id}}/{{ customer_first_name }}/{{ customer_last_name }}/" target="_blank">
+                        <td class="email_button" bgcolor="#fcfae2">
+                            <a  class=”link” href="https://www.qpcentral.co.uk/CustomerAcceptance/SpecialOffer/{{smartsheet_id}}/{{ customer_first_name }}/{{ customer_last_name }}/" target="_blank">
                                 <i class="fas fa-check-circle"></i> Accept Special Offer             
                             </a>
                         </td>
@@ -211,8 +211,8 @@
             <td align="left">
                 <table cellspacing="0" cellpadding="0">
                     <tr>
-                        <td class="email_button" bgcolor="#f07e39">
-                            <a  class=”link” href="http://127.0.0.1:8000/CustomerEnquiry/SpecialOffer/{{smartsheet_id}}/{{ customer_first_name }}/{{ customer_last_name }}/" target="_blank">
+                        <td class="email_button" bgcolor="#fcfae2">
+                            <a  class=”link” href="https://www.qpcentral.co.uk/CustomerEnquiry/SpecialOffer/{{smartsheet_id}}/{{ customer_first_name }}/{{ customer_last_name }}/" target="_blank">
                                 <i class="fas fa-handshake"></i> Discuss Special Offer             
                             </a>
                         </td>
@@ -225,12 +225,12 @@
     <div class="background_footer">
 
         <div class="left">
-            <img src='http://www.qpcentral.co.uk/static/images/yh_logo_white_text.png' width="150">
+            <img src='https://www.qpcentral.co.uk/static/images/plumble_logo_white_text.png' width="150">
         </div>
 
         <div class="right">
-            <p class="footer_text">Copyright © 2020 Your Heat Ltd | VAT No. 213 6884 04</p>
-            <p class="footer_text"><a href=' https://yourheat.co.uk/terms-and-conditions/'>Installation Terms and
+            <p class="footer_text">Copyright © 2024 Plumble Ltd | VAT No. 458261280</p>
+            <p class="footer_text"><a href=' https://www.plumble.co.uk.co.uk/terms-and-conditions/'>Installation Terms and
                     Conditions</a></p>
         </div>
     </div>
