--- a/templates/yourheat/adminpages/customer_comms_landing_page.html
+++ b/templates/yourheat/adminpages/customer_comms_landing_page.html
@@ -115,7 +115,7 @@
    
     
     <hr>
-    <div class="row">
+    <!-- <div class="row">
         <div class = "col-3">
             &nbsp;
         </div>
@@ -123,10 +123,10 @@
             <h4>Customer Finance Administration</h4>
         </div>
         
-    </div>
+    </div> -->
     
 
-    <div class="row">
+    <!-- <div class="row">
         <div class = "col-4">
             &nbsp;
         </div>
@@ -142,9 +142,9 @@
         <div class = "col-2">
             <a class="btn boilerbtn {% if finance_status == 'BI' %} btn-dark {% else %} btn-secondary disabled {% endif %}" href="{% url 'PreviewComms' 'Balance Receipt Comms' customer_id  %}">Balance Receipt</a>
         </div> 
-    </div>
+    </div> -->
 
-    {% if finance_status != '' %}
+    <!-- {% if finance_status != '' %}
     <div class="row">
         <div class = "col-3">
             &nbsp;
@@ -167,7 +167,7 @@
         </div>
         
     </div>
-    {% endif %}
+    {% endif %} -->
       
     <div class="row comms-row">
         <div class = "col-4">            
