--- a/templates/yourheat/pages/base.html
+++ b/templates/yourheat/pages/base.html
@@ -5,7 +5,7 @@
 
 
 <head>
-  <title>Your Heat Customer Admin</title>
+  <title>Plumble Customer Admin</title>
   <meta charset="UTF-8">
   <meta name="google" content="notranslate">
   <meta http-equiv="Content-Language" content="en">
@@ -40,7 +40,7 @@
       </div>
     </a>
 
-    <a class="navbar-brand" href="/adminhome">Your Heat Operations Admin</a>
+    <a class="navbar-brand" href="/adminhome">Plumble Operations Admin</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
       aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
