--- a/templates/pdf/user_yourheatx/customer_comms/Customer Quote Comms.html
+++ b/templates/pdf/user_yourheatx/customer_comms/Customer Quote Comms.html
@@ -155,7 +155,7 @@
 
 
             <p class="all_text">
-                For more information about us, please visit <a href='https://www.plumble.co.uk/'><b>www.yourheat.co.uk</b></a>    
+                For more information about us, please visit <a href='https://www.plumble.co.uk/'><b>www.plumble.co.uk</b></a>    
             </p>
 
             <p class="all_text">
